* Allowed `mergeV()` and `mergeE()` to supply `null` in `Map` values.
* Change signature of `hasId(P<Object>)` and `hasValue(P<Object>)` to `hasId(P<?>)` and `hasValue(P<?>)`.
* Improved error message for when `emit()` is used without `repeat()`.
* Changed `PythonTranslator` to generate snake case step naming instead of camel case.
* Fixed bug in `IndexStep` which prevented Java serialization due to non-serializable lambda usage by creating serializable function classes.

[[release-3-7-3]]
=== TinkerPop 3.7.3 (October 23, 2024)

This release also includes changes from <<release-3-6-8, 3.6.8>>.

* Refactored mutation events registration by moving reusable code from relevant steps to `EventUtil`
* Opened `NoOpBarrierStep` for extensibility (removed `final` keyword).
* Deprecated public constructor for `SeedStrategy` in favor of builder pattern to be consistent with other strategies.
* Allowed specification of a customized Spark app name.
* Added getter method to `CoinStep` for its probability field.
* Prevented decimal values from being parsed by `asDate()`.
* Prevented specification of `Cardinality` to `option()` when not used in conjunction with `mergeV()`.
* Exposed a mechanism for providers to customize the assertion of error messages in feature tests.
* Attempted to detect JDK version for Gremlin Console to avoid problems with Java 17 if `neo4j-gremlin` is used.
* Fixed so that `TrimGlobalStep` and `TrimLocalStep` have the same character control handling as `Ltrim` and `Rtrim`
* Fixed a bug in `MaxLocalStep`, `MinLocalStep`, `MeanLocalStep` and `SumLocalStep` that it throws `NoSuchElementException` when encounters an empty iterator as input.
* Fixed cases where Map keys of incomparable types could panic in `gremlin-go`.
* Fixed an issue where missing necessary parameters for logging, resulting in '%!x(MISSING)' output in `gremlin-go`.
* Added getter method to `ConcatStep`, `ConjoinStep`, `SplitGlobalStep` and `SplitLocalStep` for their private fields.