@@ -85,11 +85,8 @@ func NewDriverRemoteConnection(
 		ConnectionTimeout:        connectionTimeoutDefault,
 		EnableCompression:        false,
 		EnableUserAgentOnConnect: true,
-		// ReadBufferSize and WriteBufferSize specify I/O buffer sizes in bytes. The default is 1048576.
-		// If a buffer size is set zero, then the Gorilla websocket 4096 default size is used. The I/O buffer
-		// sizes do not limit the size of the messages that can be sent or received.
-		ReadBufferSize:  1048576,
-		WriteBufferSize: 1048576,
+		ReadBufferSize:           readBufferSizeDefault,
+		WriteBufferSize:          writeBufferSizeDefault,
 
 		NewConnectionThreshold:       defaultNewConnectionThreshold,
 		MaximumConcurrentConnections: runtime.NumCPU(),
